<resources>
    <string name="app_name">Contacts_API</string>
    <string name="direccion">Direccion</string>
    <string name="ciudad">Ciudad</string>
    <string name="compa_a">Compañía</string>
    <string name="apellido">Apellido</string>
    <string name="nombre">Nombre</string>
    <string name="estado">Ciudad</string>
    <string name="agregar_contacto" />
    <string name="detalle_persona" />

    <string-array name="phone_labels">
        <item>Casa</item>
        <item>Trabajo</item>
        <item>Celular</item>
    </string-array>

    <string-array name="email_labels">
        <item>Personal</item>
        <item>Trabajo</item>
        <item>Otro</item>
    </string-array>
</resources>