<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <ImageView
        android:id="@+id/imgPersona"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="ContentDescription,ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/persona_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/persona_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apellido"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/persona_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direccion"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/persona_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ciudad"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/persona_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estado"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/persona_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compa_a"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/persona_phones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Telefonos: "
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/persona_emails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Emails: "
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
